feat: handle product not found using RestControllerAdvice and add unit tests